--- a/package.json
+++ b/package.json
@@ -55,7 +55,10 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "classnames": "^2.2.5",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6"
   },
   "jest": {
     "collectCoverageFrom": [
